Revert "Use new Collection methods added in Java 9"
This reverts commit 1acda1ff8bb2a58c458395d61c0aaeae3d425e53.