@@ -15,6 +15,7 @@
  */
 package org.fedoraproject.xmvn.deployer;
 
+import java.util.Collections;
 import java.util.List;
 
 import org.fedoraproject.xmvn.artifact.Artifact;
@@ -34,7 +35,7 @@ public class DependencyDescriptor
     {
         this.dependencyArtifact = dependencyArtifact;
         this.optional = optional;
-        this.exclusions = List.copyOf( exclusions );
+        this.exclusions = Collections.unmodifiableList( exclusions );
     }
 
     public Artifact getDependencyArtifact()
