@@ -16,6 +16,7 @@
 package org.fedoraproject.xmvn.mojo;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
@@ -53,7 +54,7 @@ class BuildDependencyVisitor
 
     public Set<Artifact> getArtifacts()
     {
-        return Set.copyOf( artifacts );
+        return Collections.unmodifiableSet( artifacts );
     }
 
     private boolean isExternal( InputLocation location )
